update to abstract out resource path into organization, project
